; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_da9052-irq.c_da9052_disable_irq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_da9052-irq.c_da9052_disable_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.da9052 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @da9052_disable_irq(%struct.da9052* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.da9052*, align 8
  %5 = alloca i32, align 4
  store %struct.da9052* %0, %struct.da9052** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.da9052*, %struct.da9052** %4, align 8
  %7 = load i32, i32* %5, align 4
  %8 = call i32 @da9052_map_irq(%struct.da9052* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* %5, align 4
  store i32 %12, i32* %3, align 4
  br label %16

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @disable_irq(i32 %14)
  store i32 0, i32* %3, align 4
  br label %16

16:                                               ; preds = %13, %11
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @da9052_map_irq(%struct.da9052*, i32) #1

declare dso_local i32 @disable_irq(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
